<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_ros2_proto</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ostarsier@163.com">yonsvm</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>std_msgs</build_depend> <!-- 必须添加 -->


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

   <exec_depend>std_msgs</exec_depend> <!-- 必须添加 -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
