<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vla_x1</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yonsvm@todo.todo">yonsvm</maintainer>
  <license>TODO: License declaration</license>

  <depend>my_ros2_proto</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>